Fix spelling of 'Colouring' to 'Coloring' and enhance README
Updated the README to correct spelling and improve structure.